Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@
 
 .project-card {
     min-width: 256px;
-    min-height: 346px;
+    min-height: 364px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -146,6 +146,7 @@
     border-bottom: 4px solid rgb(48, 77, 113);
     font-family: PopBold;
     font-size: 24px;
+    margin-top: 18px;
 }
 
 .project-img {
